# CMA-Rust-Wallet-Demo-App

./: Cargo.toml  Dockerfile  INTEGRATION_NOTES.md  README.md  cartesi.toml
devnet/: .env  .gitignore  compose.local.yaml  host.env  run_devnet.sh  transform_proof.py  withdrawal.json
src/: main.rs
