[package]
name = "cma-rust-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
ethers-core = "1.0.2"
hex = "0.4"
libc = "0.2"
libcmt-binding-rust = { git = "https://github.com/Mugen-Builders/libcmt-binding-rust.git", branch = "main" }

# libcma is pulled straight from GitHub. Its build.rs cross-compiles the real riscv64
# libcma.a from source (no vendored archive needed) and auto-inits its own submodules.
# On the Cartesi machine (riscv64) use the real libcma; on the host use the in-memory mock.
[target.'cfg(target_arch = "riscv64")'.dependencies]
libcma_binding_rust = { git = "https://github.com/Mugen-Builders/libcma_binding_rust.git", branch = "main", default-features = false, features = ["riscv64"] }

[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
libcma_binding_rust = { git = "https://github.com/Mugen-Builders/libcma_binding_rust.git", branch = "main", default-features = false, features = ["native"] }
